# MaterialFiles

./: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/me/zhanghai/android/files/file/: PathSize.kt
app/src/main/java/me/zhanghai/android/files/filejob/: FileJobs.kt
app/src/main/java/me/zhanghai/android/files/filelist/: FileListAdapter.kt  FileListFragment.kt  FileListItemSizeLiveData.kt  FileListLiveData.kt  PathExtensions.kt
app/src/main/java/me/zhanghai/android/files/navigation/: NavigationItems.kt
app/src/main/java/me/zhanghai/android/files/provider/archive/: ArchiveFileAttributes.kt  ArchiveFileSystem.kt  ArchivePasswordRequiredException.kt  PathArchiveExtensions.kt
app/src/main/java/me/zhanghai/android/files/provider/archive/archiver/: ArchiveFileEntry.kt  ArchiveReader.kt  SevenZipArchiveReader.kt  (+4 more)
app/src/main/java/me/zhanghai/android/files/settings/: Settings.kt
app/src/main/java/me/zhanghai/android/files/storage/: StorageSpace.kt
app/src/main/java/me/zhanghai/android/files/storageanalysis/: StorageAnalysis.kt  StorageAnalysisActivity.kt  StorageAnalysisAdapter.kt  StorageAnalysisFragment.kt  StorageAnalysisLiveData.kt  StorageAnalysisViewModel.kt
app/src/main/jni/: sevenzip_bridge.cpp
app/src/main/res/layout/: file_item_grid.xml  file_item_list.xml  storage_analysis_fragment.xml  storage_analysis_item.xml
app/src/main/res/menu/: file_item.xml  file_list.xml
app/src/main/res/values/: donottranslate_prefs.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
(+1 files in other folders)
